--- a/style.css
+++ b/style.css
@@ -158,12 +158,30 @@ main {
 }
 
 .player--winner {
-  background-color: #066d81;
+  background: linear-gradient(to top left,rgb(0, 191, 255),blue);
+  
 }
 
 .player--winner .name {
   font-weight: 700;
-  color: #c7365f;
+  color:white;
+  animation: key 0.5s;
+  animation-iteration-count: infinite;
+
+
+}
+@keyframes key {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
 .hidden {
